# ToyEVM

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: rust.yml
config/: config.json
docs/: README.md  code.md  evm.md  gas.md  guide.md  memo.md  opcode.md  truffle-test-solidity.md  truffle-test.md
docs/eips/: eip-1014.md  eip-1077.md  eip-1271.md  eip-1776.md  eips.md
src/: main.rs  state.rs  util.rs  vm.rs
