[package]
name = "toyevm"
version = "0.1.0"
authors = ["akatsuki-py <bluejapan73+dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
python-input = "0.8.0"
ethereum-types = "0.8.0"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.8.2"